[package]
name = "factory-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
priority-queue = "2"
serde = { version = "1", features = ["derive"]}
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
approx = "0.5"
